Update README.md
Add Prerequisites section.
Add an extra step in How to Build Kilda Controller section.